@@ -165,15 +165,6 @@ COUNTRY=TX
 # RUNI3SERVER is run if first value is TRUE
 RUNI3SERVER=TRUE
 
-# The ICHANNELS are a comma separated list of channels.
-# Each entry consists of the channel name, a channel participant mask,
-# and the corresponding imud3 channel name.  
-# The channel mask uses the same flags as is shown in the Archon help
-# files under ZAPPERMASKS.  The mask may also include the word 
-# READONLY to make the channel read-only, or PLAYERREADONLY to make 
-# the channel read-only to players alone.
-ICHANNELS=ICOFF -LEVELS +>91 coffeemud_universe
-
 # The I3PORT is the listening port for the I3 server.
 I3PORT=27766
 
@@ -187,7 +178,7 @@ I3ROUTERS=97.107.133.86:8787:*dalet,204.209.44.3:8080:*i4,150.101.219.57:8080:*K
 ######################################################################
 
 # RUNGVSERVER is run if first value is TRUE
-RUNGVSERVER=TRUE
+RUNGVSERVER=FALSE
 
 # GVCLIENTID - grapevine authorization client id
 GVCLIENTID=
@@ -1466,7 +1457,8 @@ CHANNELS=\
 	WIZ +SYSOP -NAMES, \
 	CLANTALK CLANONLY CLANINFO CONQUESTS LOGINS LOGOFFS, \
 	INFO READONLY CALENDAR EXECUTIONS LEVELS NEWPLAYERS BIRTHS MARRIAGES ACHIEVEMENTS DIVORCES CHRISTENINGS, \
-	WIZINFO READONLY LOGINS LOGOFFS DETAILEDLEVELS DETAILEDDEATHS PLAYERPURGES +SYSOP -NAMES
+	WIZINFO READONLY LOGINS LOGOFFS DETAILEDLEVELS DETAILEDDEATHS PLAYERPURGES +SYSOP -NAMES.\
+	ICOFF NOLANGUAGE I3=coffeemud_universe -LEVELS +>91 
 
 # COMMANDJOURNALS is a list, separated by commas, as below.  
 # These are system journal commands.  The journal names must be 
