@@ -471,7 +471,7 @@
 		<FONT SIZE=5 COLOR=WHITE><B>Standard Channels:</B></FONT><BR>
 		<TABLE BORDER=0><TR><TD VALIGN=TOP>
 		<TABLE BORDER=1>
-		<INPUT TYPE=HIDDEN NAME="INIBUILDVARS" VALUE="CHANNELS,FORUMJOURNALS,COMMANDJOURNALS,ICHANNELS">
+		<INPUT TYPE=HIDDEN NAME="INIBUILDVARS" VALUE="CHANNELS,FORUMJOURNALS,COMMANDJOURNALS">
 		@ChannelNext?RESET@
 		@loop@
 		  @ChannelNext?NEXT&ALLCHANNELS@
@@ -483,8 +483,7 @@
 				<table border=0>
 				<tr><td><FONT COLOR=WHITE>Mask(<A HREF="javascript:openUp2('ZAPPERMASKS')"><font color=cyan>?</font></A>)</td><td><INPUT NAME="CHANNEL_@ChannelInfo?ID@_MASK" SIZE=25 VALUE="@ChannelInfo?MASK@"></td></tr>
 				<tr><td><FONT COLOR=WHITE>Colors(<A HREF="javascript:openUp2('COLORCODES')"><font color=cyan>?</font></A>)</td><td><INPUT NAME="CHANNEL_@ChannelInfo?ID@_COLORS" SIZE=20 VALUE="@ChannelInfo?COLOROVERRIDE@"></td></tr>
-				<tr><td><FONT COLOR=WHITE>I3</td><td><INPUT NAME="CHANNEL_@ChannelInfo?ID@_I3NAME" SIZE=20 VALUE="@ChannelInfo?I3NAME@" ONCHANGE="document.INIFORM.CHANNEL_@ChannelInfo?ID@_DISCNAME.value='';"></td></tr>
-				<tr><td><FONT COLOR=WHITE>DISC</td><td><INPUT NAME="CHANNEL_@ChannelInfo?ID@_DISCNAME" SIZE=20 VALUE="@ChannelInfo?DISCNAME@" ONCHANGE="document.INIFORM.CHANNEL_@ChannelInfo?ID@_I3NAME.value='';"></td></tr>
+				<tr><td><FONT COLOR=WHITE>IMChan</td><td><INPUT NAME="CHANNEL_@ChannelInfo?ID@_IMNAME" SIZE=20 VALUE="@ChannelInfo?IMNAME@"></td></tr>
 				</table>
 				</TD>
 				<TD VALIGN=TOP>
@@ -492,7 +491,7 @@
 					Flags:<BR> 
 					<SELECT NAME="CHANNEL_@ChannelInfo?ID@_FLAG_" multiple>
 					@for?FLAGID=ChannelInfo?ALLFLAGS@
-						<OPTION VALUE="@RequestParameter?FLAGID&AFTER=5@" @ChannelInfo?@@RequestParameter?FLAGID@@&SELECTED@ >@RequestParameter?FLAGID&AFTER=5&CAPITALCASE@
+						<OPTION VALUE="@RequestParameter?FLAGID&AFTER=5@" @ChannelInfo?@@RequestParameter?FLAGID@@&SELECTED@ >@RequestParameter?FLAGID&AFTER=5&CAPITALCASE@ @if?CheckReqParm?FLAGID=FLAG_I3&||FLAGID=FLAG_IMC2&||FLAGID=FLAG_GRAPEVINE&||FLAGID=FLAG_DISCORD@ (set IMChan) @endif@
 					@next@
 					</SELECT>
 					</FONT>
@@ -506,8 +505,7 @@
 				<TD VALIGN=TOP><FONT COLOR=WHITE><table border=0>
 				<tr><td><FONT COLOR=WHITE>Mask(<A HREF="javascript:openUp2('ZAPPERMASKS')"><font color=cyan>?</font></A>)</td><td><INPUT NAME="CHANNEL__MASK" SIZE=25 VALUE=""></td></tr>
 				<tr><td><FONT COLOR=WHITE>Colors(<A HREF="javascript:openUp2('COLORCODES')"><font color=cyan>?</font></A>)</td><td><INPUT NAME="CHANNEL__COLORS" SIZE=20 VALUE=""></td></tr>
-				<tr><td><FONT COLOR=WHITE>I3</td><td><INPUT NAME="CHANNEL__I3NAME" SIZE=20 VALUE="@ChannelInfo?I3NAME@" ONCHANGE="document.INIFORM.CHANNEL_@ChannelInfo?ID@_DISCNAME.value='';"></td></tr>
-				<tr><td><FONT COLOR=WHITE>DISC</td><td><INPUT NAME="CHANNEL__DISCNAME" SIZE=20 VALUE="@ChannelInfo?DISCNAME@" ONCHANGE="document.INIFORM.CHANNEL_@ChannelInfo?ID@_I3NAME.value='';"></td></tr>
+				<tr><td><FONT COLOR=WHITE>IMChan</td><td><INPUT NAME="CHANNEL__IMNAME" SIZE=20 VALUE="@ChannelInfo?IMNAME@"></td></tr>
 				</table>
 				</TD>
 				<TD VALIGN=TOP>
@@ -515,7 +513,7 @@
 					Flags:<BR>
 					<SELECT NAME="CHANNEL__FLAG_" multiple>
 					@for?FLAGID=ChannelInfo?ALLFLAGS@
-						<OPTION VALUE="@RequestParameter?FLAGID&AFTER=5@" >@RequestParameter?FLAGID&AFTER=5&CAPITALCASE@
+						<OPTION VALUE="@RequestParameter?FLAGID&AFTER=5@" >@RequestParameter?FLAGID&AFTER=5&CAPITALCASE@ @if?CheckReqParm?FLAGID=FLAG_I3&||FLAGID=FLAG_IMC2&||FLAGID=FLAG_GRAPEVINE&||FLAGID=FLAG_DISCORD@(IMChan)@endif@
 					@next@
 					</SELECT>
 					</FONT>
@@ -526,7 +524,6 @@
 		<TD VALIGN=TOP>
 			<FONT COLOR=WHITE>
 				@INIValue?MASK=CHANNELS&INIHELP@<P>
-				@INIValue?MASK=ICHANNELS&INIHELP@
 			</FONT>
 		</TD></TR></TABLE>
 		<TABLE WIDTH=100% BORDER=1>
@@ -710,6 +707,28 @@
 				<INPUT TYPE=TEXT NAME=I3PORT SIZE=10 VALUE="@INIValue?MASK=I3PORT&VALUE@">
 				<BR>
 				<FONT COLOR=WHITE>@INIValue?MASK=I3PORT&INIHELP@</FONT>
+			</TD></TR>
+		</TABLE>
+		<HR>
+		<FONT SIZE=5 COLOR=WHITE><B>Grapevine</B></FONT><FONT COLOR=WHITE SIZE=-2>* Requires a mud restart to take affect.</FONT><BR>
+		<TABLE WIDTH=100% BORDER=1>
+			<TR><TD WIDTH=200 VALIGN=TOP><FONT COLOR=WHITE>RUNGVSERVER</FONT>
+				</TD><TD VALIGN=TOP>
+				<INPUT TYPE=TEXT NAME=RUNGVSERVER SIZE=10 VALUE="@INIValue?MASK=RUNGVSERVER&VALUE@">
+				<BR>
+				<FONT COLOR=WHITE>@INIValue?MASK=RUNGVSERVER&INIHELP@</FONT>
+			</TD></TR>
+			<TR><TD WIDTH=200 VALIGN=TOP><FONT COLOR=WHITE>GVCLIENTID</FONT>
+				</TD><TD VALIGN=TOP>
+				<INPUT TYPE=TEXT NAME=GVCLIENTID SIZE=60 VALUE="@INIValue?MASK=GVCLIENTID&VALUE@">
+				<BR>
+				<FONT COLOR=WHITE>@INIValue?MASK=GVCLIENTID&INIHELP@</FONT>
+			</TD></TR>
+			<TR><TD WIDTH=200 VALIGN=TOP><FONT COLOR=WHITE>GVCLIENTSECRET</FONT>
+				</TD><TD VALIGN=TOP>
+				<INPUT TYPE=TEXT NAME=GVCLIENTSECRET SIZE=10 VALUE="@INIValue?MASK=GVCLIENTSECRET&VALUE@">
+				<BR>
+				<FONT COLOR=WHITE>@INIValue?MASK=GVCLIENTSECRET&INIHELP@</FONT>
 			</TD></TR>
 		</TABLE>
 	@endif@
